--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,35 @@ monitor_speed=115200
 board_build.flash_mode=dio
 build_src_filter =
   +<*>
-  -<main.cpp>
-  +<main-sim.cpp>
+  +<main.cpp>
+  -<main-sim.cpp>
+
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+lib_extra_dirs = ~/Documents/Arduino/libraries
+board_build.partitions = no_ota.csv
+monitor_speed=115200
+board_build.flash_mode=dio
+build_src_filter =
+  +<*>
+  +<main.cpp>
+  -<main-sim.cpp>
+
+[env:debug]
+platform = espressif32
+board = esp32dev
+framework = arduino
+lib_extra_dirs = ~/Documents/Arduino/libraries
+board_build.partitions = no_ota.csv
+monitor_speed=115200
+board_build.flash_mode=dio
+build_src_filter =
+  +<*>
+  +<main.cpp>
+  -<main-sim.cpp>
+build_type = debug
 
 ; Failed attempt to simulate TFT_eSPI using LVGL Drivers :D
 ; TFT_eSPI driver for SDL is needed, may be I will build one later if needed.
