Conditional Airmouse feature

--- a/data/config/wificonfig.json
+++ b/data/config/wificonfig.json
@@ -1,6 +1,6 @@
 {
   "ssid": "AbiJamun",
-  "password": "kC7yTF7R7fYmPHLg",
+  "password": "---",
   "wifimode": "WIFI_STA",
   "wifihostname": "freetouchdeck",
   "attempts": 10,
