Update default env

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,42 @@
+[env:default]
+ platform = espressif32@3.5.0
+board = esp32dev
+framework = arduino
+board_build.partitions = no_ota.csv
+monitor_speed=115200
+board_build.flash_mode=qio
+lib_deps = 
+  bodmer/TFT_eSPI@2.5.31
+  h2zero/NimBLE-Arduino@1.4.2
+  bblanchon/ArduinoJson
+  me-no-dev/AsyncTCP
+  ESPAsyncWebServer=https://github.com/vortigont/ESPAsyncWebServer#iterfix
+  BLE-Combo=https://github.com/earthicko/ESP32-BLE-Combo
+build_flags =
+    -D USER_SETUP_LOADED
+    -D ILI9341_DRIVER
+    -D TFT_MISO=33
+    -D TFT_MOSI=27
+    -D TFT_SCLK=12
+    -D TFT_CS=22
+    -D TFT_DC=25
+    -D TFT_RST=32
+    -D TFT_BL=13
+    -D TOUCH_CS=26
+    -D LOAD_GLCD=1
+    -D LOAD_FONT2
+    -D LOAD_FONT4
+    -D LOAD_FONT6
+    -D LOAD_FONT7
+    -D LOAD_FONT8
+    -D LOAD_GFXFF
+    -D SMOOTH_FONT
+    -D SPI_FREQUENCY=40000000
+build_src_filter =
+  +<*>
+  +<main.cpp>
+  -<main-sim.cpp>
+
 [env:esp32-s3-devkitc-1]
 platform = espressif32
 board = esp32-s3-devkitc-1
@@ -24,44 +63,7 @@ build_src_filter =
   +<main.cpp>
   -<main-sim.cpp>
 
-[env:esp32direct]
- platform = espressif32@3.5.0
-board = esp32dev
-framework = arduino
-board_build.partitions = no_ota.csv
-monitor_speed=115200
-board_build.flash_mode=qio
-lib_deps = 
-  bodmer/TFT_eSPI
-  h2zero/NimBLE-Arduino
-  bblanchon/ArduinoJson
-  me-no-dev/AsyncTCP
-  me-no-dev/ESP Async WebServer
-  BLE-Combo=https://github.com/earthicko/ESP32-BLE-Combo
-build_flags =
-    -D USER_SETUP_LOADED
-    -D ILI9341_DRIVER
-    -D TFT_MISO=33
-    -D TFT_MOSI=27
-    -D TFT_SCLK=12
-    -D TFT_CS=22
-    -D TFT_DC=25
-    -D TFT_RST=32
-    -D TFT_BL=13
-    -D TOUCH_CS=26
-    -D LOAD_GLCD=1
-    -D LOAD_FONT2
-    -D LOAD_FONT4
-    -D LOAD_FONT6
-    -D LOAD_FONT7
-    -D LOAD_FONT8
-    -D LOAD_GFXFF
-    -D SMOOTH_FONT
-    -D SPI_FREQUENCY=40000000
-build_src_filter =
-  +<*>
-  +<main.cpp>
-  -<main-sim.cpp>
+
 
 [env:debug]
 platform = espressif32
